poc-manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: easi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    fargate: 'true'
  name: cedarproxy
  namespace: easi
spec:
  ports:
  - port: 8001
    targetPort: 8001
  selector:
    app: cedarproxy
---
apiVersion: v1
kind: Service
metadata:
  labels:
    fargate: 'true'
  name: db
  namespace: easi
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: db
---
apiVersion: v1
kind: Service
metadata:
  labels:
    fargate: 'true'
  name: easi-backend
  namespace: easi
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "2345"
    port: 2345
    targetPort: 2345
  selector:
    app: easi-backend
---
apiVersion: v1
kind: Service
metadata:
  labels:
    fargate: 'true'
  name: easi-client
  namespace: easi
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: easi-client
---
apiVersion: v1
kind: Service
metadata:
  labels:
    fargate: 'true'
  name: email
  namespace: easi
spec:
  ports:
  - name: smtp
    port: 1025
    targetPort: 1025
  - name: http
    port: 1080
    targetPort: 1080
  selector:
    app: email
---
apiVersion: v1
kind: Service
metadata:
  labels:
    fargate: 'true'
  name: minio
  namespace: easi
spec:
  ports:
  - name: "9004"
    port: 9004
    targetPort: 9004
  - name: console
    port: 9001
    targetPort: 9001
  selector:
    app: minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fargate: 'true'
  name: cedarproxy
  namespace: easi
spec:
  revisionHistoryLimit: 1 
  selector:
    matchLabels:
      app: cedarproxy
  template:
    metadata:
      labels:
        app: cedarproxy
        fargate: 'true'
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: cedarproxy-configmap
        image: 840301899071.dkr.ecr.us-west-2.amazonaws.com/easi-cedarproxy:k8s-test
        imagePullPolicy: Always
        name: cedarproxy
        ports:
        - containerPort: 8001
        resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fargate: 'true'
  name: db
  namespace: easi
spec:
  revisionHistoryLimit: 1 
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy: {}
  template:
    metadata:
      labels:
        app: db
        fargate: 'true'
    spec:
      containers:
      - args:
        - postgres
        - -c
        - max_connections=25
        image: postgres:14.11
        name: db
        ports:
        - containerPort: 5432
          protocol: TCP
        resources: {}
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fargate: 'true'
  name: easi-backend
  namespace: easi
spec:
  revisionHistoryLimit: 1 
  replicas: 1
  selector:
    matchLabels:
      app: easi-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: easi-backend
        fargate: 'true'
    spec:
      containers:
      - command:
        - ./bin/easi
        - serve
        image: 840301899071.dkr.ecr.us-west-2.amazonaws.com/easi-backend:k8s-test
        imagePullPolicy: IfNotPresent
        name: easi-backend
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fargate: 'true'
    app: easi-client
  name: easi-client
  namespace: easi
spec:
  revisionHistoryLimit: 1 
  replicas: 1
  selector:
    matchLabels:
      app: easi-client
  template:
    metadata:
      labels:
        app: easi-client
        fargate: 'true'
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: easi-client-configmap
        image: 840301899071.dkr.ecr.us-west-2.amazonaws.com/easi-frontend:k8s-test
        imagePullPolicy: IfNotPresent
        name: easi-client
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: 
          limits:
            memory: "2Gi"
            cpu: "1"
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fargate: 'true'
    app: email
  name: email
  namespace: easi
spec:
  revisionHistoryLimit: 1 
  replicas: 1
  selector:
    matchLabels:
      app: email
  template:
    metadata:
      labels:
        app: email
        fargate: 'true'
    spec:
      containers:
      - image: dockage/mailcatcher:latest
        name: email
        ports:
        - containerPort: 1025
          protocol: TCP
        - containerPort: 1080
          protocol: TCP
        resources: {}
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fargate: 'true'
  name: minio
  namespace: easi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
        fargate: 'true'
    spec:
      containers:
      - args:
        - :9001
        - --address
        - :9004
        command:
        - minio
        - server
        - /data
        - --console-address
        image: minio/minio:latest
        name: minio
        ports:
        - containerPort: 9004
          protocol: TCP
        - containerPort: 9001
          protocol: TCP
        resources: {}
      restartPolicy: Always
---
