poc-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: easi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    fargate: 'true'
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/healthcheck
  name: easi-backend-ingress
  namespace: easi
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: easi-backend
            port:
              number: 8080
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    fargate: 'true'
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/healthcheck
  name: easi-frontend-ingress
  namespace: easi
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: easi-frontend
            port:
              number: 3000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: easi-backend
            port:
              number: 8080
        path: /api
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    fargate: 'true'
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  name: email-ingress
  namespace: easi
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: email
            port:
              number: 1080
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    fargate: 'true'
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  name: minio-console-ingress
  namespace: easi
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: minio
            port:
              number: 9001
        path: /
        pathType: Prefix
